<resources>
    <string name="app_name">Covoit</string>
    <string name="apiKey">AIzaSyAvAft3BV6eE_TTVvZiChAbxBj2i6Drgp0</string>
    <string name="activity_recherche">Recherche</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="urlBd">https://covoituragebd-7356.restdb.io/rest</string>
    <string name="départ">Point de départ</string>
    <string name="arrivée">Destination</string>
    <string name="actv_depart">Point de départ</string>
    <string name="actv_destination">Destination</string>
    <string name="recherche_date">Sélectionner date</string>
    <string name="recherche_btn">Rechercher</string>
    <string name="connexion_btnConnexion">Connexion</string>
    <string name="connexion_btnInscription">Inscription</string>
    <string name="connexion_mail">mail</string>
    <string name="connexion_mdp">mot de passe</string>
    <string name="title_activity_recherche">Recherche</string>
    <string name="title_activity_carte">Carte</string>
    <string name="recherche_vide">Aucun resultat, réessayez plus tard !</string>
    <string name="conducteurPassager">conducteur/passager</string>
    <string name="telephone">telephone</string>
    <string name="fermer">fermer</string>
    <string name="conducteur">conducteur</string>
    <string name="passager">passager</string>
    <string name="demander_covoiturage">demander covoiturage</string>
    <string name="date">Date</string>
    <string name="d_part">Départ :</string>
    <string name="destination">Destination :</string>
    <string name="prix">Prix :</string>
    <string name="nombre_de_places">Nombre de places :</string>
    <string name="title_activity_test">testActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_covoiturages">Covoiturages</string>
    <string name="title_propositions">Propositions</string>
    <string name="title_notifications">Notifications</string>
    <string name="proposer">proposer</string>
    <string name="title_activity_proposition">Proposition</string>
    <string name="urlLogo">https://covoituragebd-7356.restdb.io/media/5e7a8375cf927e3e0001bc30</string>
    <string name="mauvais_mot_de_passe">Mauvais mot de passe</string>
    <string name="tvPassager">Votre rôle ne vous permet pas d\'être passager d\'un covoiturage.</string>
    <string name="tvConducteur">Votre rôle ne vous permet pas d\'être conducteur d\'un covoiturage.</string>
</resources>
