<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.PropositionActivite"
    android:orientation="vertical"
    android:theme="@style/AppTheme.Proposition">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="27dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:background="@color/appBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/proposition_margin"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/proposition_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:drawableBottom="@drawable/ic_date_range_24dp"/>

            <TextView
                android:id="@+id/proposition_dateSelectionnee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/proposition_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/d_part"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/proposition_depart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/actv_depart"
                    android:completionThreshold="1"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/destination"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/proposition_destination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/actv_destination"
                        android:completionThreshold="1"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/proposition_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prix"/>

                <NumberPicker
                    android:id="@+id/proposition_prix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:theme="@style/proposition_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_de_places"/>

                <NumberPicker
                    android:id="@+id/proposition_places"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/proposition_btn_proposer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proposer"
                android:background="@color/quantum_bluegrey200"
                android:textSize="13sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>